syntax = "proto3";

package service.order.v1;

option go_package = "mshop/service/order/api/order/v1;v1";
option java_multiple_files = true;
option java_package = "service.order.api.order.v1";


message Empty {
    
}


message UserInfo {
    int32 id = 1;
}

message OrderStatus {
    int32 id = 1;
    string orderSn = 2;
    string status = 3;
}

message CartItemRequest {
    int32 id = 1;
    int32 userId = 2;
    int32 goodsId = 3;
    string goodsName = 4;
    string goodsImage = 5;
    float goodsPrice = 6;
    int32 nums = 7;
    bool checked = 8;
}

message OrderRequest {
    int32 id = 1;
    int32 userId = 2;
    string address = 3;
    string name = 4;
    string mobile = 5;
    string post = 6;
}

message OrderInfoResponse {
    int32 id = 1;
    int32 userId = 2;
    string orderSn = 3;
    string payType = 4;
    string status = 5;
    string post = 6;
    float total = 7;
    string address = 8;
    string name = 9;
    string mobile = 10;
    string addTime = 11;
}

message ShopCartInfoResponse {
    int32 id = 1;
    int32 userId = 2;
    int32 goodsId = 3;
    int32 nums = 4;
    bool checked = 5;
}

message OrderItemResponse {
    int32 id = 1;
    int32 orderId = 2;
    int32 goodsId = 3;
    string goodsName = 4;
    string goodsImage = 5;
    float goodsPrice = 6;
    int32 nums = 7;
}

message OrderInfoDetailResponse {
    OrderInfoResponse orderInfo = 1;
    repeated OrderItemResponse goods = 2;
}

message OrderFilterRequest {
    int32 userId = 1;
    int32 pages = 2;
    int32 pagePerNums = 3;
}

message OrderListResponse {
    int32 total = 1;
    repeated OrderInfoResponse data = 2;
}

message CartItemListResponse {
    int32 total = 1;
    repeated ShopCartInfoResponse data = 2;
}
