syntax = "proto3";

package service.order.v1;

option go_package = "mshop/service/order/api/order/v1;v1";
option java_multiple_files = true;
option java_package = "service.order.api.order.v1";

import "order/v1/message.proto";
import "google/api/annotations.proto";

service Order {
    //购物车
    // 获取用户的购物车信息
    rpc CartItemList(UserInfo) returns(CartItemListResponse) {
        option (google.api.http) = {
            get: "/v1/cart/{id}"
        };
    }
    
    // 添加商品到购物车
    rpc CreateCartItem(CartItemRequest) returns(ShopCartInfoResponse) {
        option (google.api.http) = {
            post: "/v1/cart"
            body: "*"
        };
    }
    
    // 修改购物车信息
    rpc UpdateCartItem(CartItemRequest) returns(Empty) {
        option (google.api.http) = {
            put: "/v1/cart/{id}"
            body: "*"
        };
    }
    
    // 删除购物车条目
    rpc DeleteCartItem(CartItemRequest) returns(Empty) {
        option (google.api.http) = {
            delete: "/v1/cart/{id}"
        };
    }

    //订单
    // 创建订单
    rpc CreateOrder(OrderRequest) returns (OrderInfoResponse) {
        option (google.api.http) = {
            post: "/v1/order"
            body: "*"
        };
    }
    
    // 订单列表
    rpc OrderList(OrderFilterRequest) returns (OrderListResponse) {
        option (google.api.http) = {
            get: "/v1/order"
        };
    }
    
    // 订单详情
    rpc OrderDetail(OrderRequest) returns (OrderInfoDetailResponse) {
        option (google.api.http) = {
            get: "/v1/order/{id}"
        };
    }
    
    // 修改订单状态
    rpc UpdateOrderStatus(OrderStatus) returns (Empty) {
        option (google.api.http) = {
            put: "/v1/order/{id}/status"
            body: "*"
        };
    }
}


